--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@sanity/base": "^2.21.10",
     "@sanity/block-content-to-hyperscript": "^3.0.0",
     "@sanity/core": "^2.21.11",
-    "@sanity/dashboard": "^2.21.10",
+    "@sanity/dashboard": "^2.22.0",
     "@sanity/default-layout": "^2.21.10",
     "@sanity/default-login": "^2.21.10",
     "@sanity/desk-tool": "^2.21.10",
@@ -25,6 +25,7 @@
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "sanity-plugin-dashboard-widget-netlify": "^1.2.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
