--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.21.10",
+    "@sanity/base": "^2.22.0",
     "@sanity/block-content-to-hyperscript": "^3.0.0",
-    "@sanity/core": "^2.21.11",
+    "@sanity/code-input": "^2.22.0",
+    "@sanity/core": "^2.22.0",
     "@sanity/dashboard": "^2.22.0",
-    "@sanity/default-layout": "^2.21.10",
-    "@sanity/default-login": "^2.21.10",
-    "@sanity/desk-tool": "^2.21.10",
-    "@sanity/vision": "^2.21.10",
+    "@sanity/default-layout": "^2.22.0",
+    "@sanity/default-login": "^2.22.0",
+    "@sanity/desk-tool": "^2.22.2",
+    "@sanity/vision": "^2.22.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
